src/objects/MUSW__Comment__c.object
<CustomObject>
    <description>Comments/markups from building and site plan files.</description>
    <fields>
        <fullName>MUSW__BG_Bluebeam_CommentId__c</fullName>
        <description>Track unique comments created in Bluebeam tools</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique id of a Bluebeam Comment</inlineHelpText>
        <label>Bluebeam CommentId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__BG_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_File_Name__c</fullName>
        <description>Name of the file on Bluebeam</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_Miletstone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>MUSW__Milestone__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_Page__c</fullName>
        <description>Page number that this comment/markup appears on.</description>
        <label>Page</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__BG_Type__c</fullName>
        <description>Type of markup on Bluebeam</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Liine</fullName>
                </value>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>Stamp</fullName>
                </value>
                <value>
                    <fullName>Text Box</fullName>
                </value>
                <value>
                    <fullName>Typewriter</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Pen</fullName>
                </value>
                <value>
                    <fullName>Highlight</fullName>
                </value>
                <value>
                    <fullName>Callout</fullName>
                </value>
                <value>
                    <fullName>Rectangle</fullName>
                </value>
                <value>
                    <fullName>Ellipse</fullName>
                </value>
                <value>
                    <fullName>Polygon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Number__c</fullName>
        <label>Issued Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <label>Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>